examples/test/testpolicy9322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9322
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key21: value7
      key33: value16
      key2: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value21
          key28: value21
      podSelector:
        matchLabels:
          key19: value35
